--- a/style.css
+++ b/style.css
@@ -41,8 +41,19 @@ h1 {
   margin: -80px 0 40px;
 }
 
+.year {
+  font-size: 200px;
+  z-index: -1;
+  opacity: 0.2;
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
 .countdown {
-  display: flex;
+  /* display: flex; */
+  display: none;
   transform: scale(2);
 }
 
@@ -52,4 +63,24 @@ h1 {
   align-items: center;
   justify-content: center;
   margin: 15px;
+}
+
+.time h2 {
+  margin: 0 0 4px;
+}
+
+@media (max-width: 500px) {
+  h1 {
+    font-size: 45px;
+  }
+  .time {
+    margin: 4px;
+  }
+  .time h2 {
+    font-size: 12px;
+    margin: 0;
+  }
+  .time small {
+    font-size: 10px;
+  }
 }
