--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 @import url("https://fonts.googleapis.com/css?family=Lato&display=swap");
 
+@font-face {
+  font-family: "digital";
+  src: url(fonts/digital-7.ttf);
+  font-style: normal;
+  font-weight: 100;
+}
 * {
   box-sizing: border-box;
 }
@@ -58,6 +64,7 @@ h1 {
 }
 
 .time {
+  /* font-family: digital; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -83,4 +90,11 @@ h1 {
   .time small {
     font-size: 10px;
   }
+}
+
+#days,
+#hours,
+#minutes,
+#seconds {
+  font-family: digital;
 }
